--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -15,3 +15,14 @@ jobs:
         java-version: 1.8
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
+    - name: Release
+        uses: softprops/action-gh-release@v1
+        #        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          prerelease: true
+          files: |
+            dist/mhsig
+            dist/mhsig*jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
