--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -15,8 +15,12 @@ jobs:
         java-version: 1.8
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
-    - name:  Github Create Release
-      uses: frankjuniorr/github-create-release-action@v2.1.1
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          dist/mhsig
+          dist/mhsig*jar
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
