--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -23,4 +23,7 @@ jobs:
           dist/mhsig*jar
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+    - name: Debug1
+      run: echo "github.workflow => ${{ github.workflow }}"
+    - name: Debug2
+      run: echo "github.ref => ${{ github.ref }}"
