--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -17,6 +17,7 @@ jobs:
       run: ant -noinput -buildfile build.xml
     - name: Release
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
           dist/mhsig
